--- a/res/layout/detail_riwayat.xml
+++ b/res/layout/detail_riwayat.xml
@@ -101,35 +101,15 @@
                                 android:orientation="vertical"
                                 android:layout_weight="1">
 
-                            <!-- Start Linear Layout Nama-->
-                            <LinearLayout
-                                    android:layout_width="fill_parent"
+                            <!-- Start Text View Nama -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_nama"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                <!-- Start Text View Nama -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_nama"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/riwayat_nama"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- End Text View Nama -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Nama -->
+                                    android:textColor="#D046F2"
+                                    android:text="@string/riwayat_nama"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- End Text View Nama -->
 
                             <!-- Start Text View Nama -->
                             <TextView
@@ -137,7 +117,7 @@
                                     android:layout_width="fill_parent"
                                     android:layout_height="wrap_content"
                                     android:textColor="#FF0000"
-                                    android:hint="@string/riwayat_nama"
+                                    android:hint="@string/riwayat_hint_nama"
                                     style="@android:style/TextAppearance.DeviceDefault.Medium"
                                     android:layout_margin="10dp"/>
                             <!-- End Text View Nama -->
@@ -191,35 +171,16 @@
                                     android:visibility="gone"/>
                             <!-- End Text View Bulan -->
 
-                            <!-- Start Linear Layout Nama Dokter -->
-                            <LinearLayout
-                                    android:layout_width="fill_parent"
+                            <!-- Start Text View Nama Dokter -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_dokter"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
+                                    android:textColor="#D046F2"
+                                    android:text="@string/riwayat_dokter"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- End Text View Nama Dokter -->
 
-                                <!-- Start Text View Nama Dokter -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_dokter"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/riwayat_dokter"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- End Text View Nama Dokter -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Nama Dokter -->
 
                             <!-- Start Text View Nama Dokter -->
                             <TextView
@@ -232,35 +193,15 @@
                                     android:layout_margin="10dp"/>
                             <!-- End Text View Nama Dokter -->
 
-                            <!-- Start Linear Layout Nama Rumah Sakit -->
-                            <LinearLayout
-                                    android:layout_width="fill_parent"
+                            <!-- Start Text View Nama Rumah Sakit -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_rumahsakit"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                <!-- Start Text View Nama Rumah Sakit -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_rumahsakit"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/riwayat_rumahsakit"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- End Text View Nama Rumah Sakit -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Nama Rumah Sakit -->
+                                    android:textColor="#D046F2"
+                                    android:text="@string/riwayat_rumahsakit"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- End Text View Nama Rumah Sakit -->
 
                             <!-- Start Text View Nama Rumah Sakit -->
                             <TextView
@@ -332,35 +273,15 @@
                                     android:layout_margin="10dp"/>
                             <!-- End Text View Tanggal lahir -->
 
-                            <!-- Start Linear Layout Jenis Vaksin -->
-                            <LinearLayout
-                                    android:layout_width="wrap_content"
+                            <!-- Start Text View Jenis Vaksin -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_jenisvaksin"
+                                    android:layout_width="fill_parent"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                <!-- Start Text View Jenis Vaksin -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_jenisvaksin"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/jenis_vaksin"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- End Text View Jenis Vaksin -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Jenis Vaksin -->
+                                    android:textColor="#D046F2"
+                                    android:text="@string/jenis_vaksin"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- End Text View Jenis Vaksin -->
 
                             <!-- Start Text View Jenis Vaksin -->
                             <TextView
@@ -373,36 +294,15 @@
                                     android:layout_margin="10dp"/>
                             <!-- End Text View Jenis Vaksin -->
 
-                            <!-- Start Linear Layout Tinggi Badan -->
-                            <LinearLayout
-                                    android:layout_width="fill_parent"
+                            <!-- Start Text View Tinggi Badan -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_tinggibadan"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:gravity="center_vertical">
-
-                                <!-- Start Text View Tinggi Badan -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_tinggibadan"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/riwayat_tinggibadan"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- End Text View Tinggi Badan -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Tinggi Badan -->
+                                    android:textColor="#D046F2"
+                                    android:text="@string/riwayat_tinggibadan"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- End Text View Tinggi Badan -->
 
                             <!-- Start Linear Layout Tinggi Badan -->
                             <LinearLayout
@@ -436,36 +336,15 @@
                             </LinearLayout>
                             <!-- End Linear Layout Tinggi Badan -->
 
-                            <!-- Start Linear Layout Berat Badan -->
-                            <LinearLayout
-                                    android:layout_width="fill_parent"
+                            <!-- Start Text View Berat Badan -->
+                            <TextView
+                                    android:id="@+id/text_riwayat_beratbadan"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:gravity="center_vertical">
-
-                                <!-- Start Text View Berat Badan -->
-                                <TextView
-                                        android:id="@+id/text_riwayat_beratbadan"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/riwayat_beratbadan"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
-                                <!-- Start Text View Berat Badan -->
-
-                                <!-- Start Text View Titik Dua -->
-                                <TextView
-                                        android:id="@+id/titikdua"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="#D046F2"
-                                        android:text="@string/titikdua"
-                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                        android:layout_marginLeft="5dp"/>
-                                <!-- End Text View Titik Dua -->
-
-                            </LinearLayout>
-                            <!-- End Linear Layout Berat Badan -->
+                                    android:textColor="#D046F2"
+                                    android:text="@string/riwayat_beratbadan"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                            <!-- Start Text View Berat Badan -->
 
                             <!-- Start Linear Layout Berat Badan -->
                             <LinearLayout
