--- a/res/layout/tumbang_galeri_detail.xml
+++ b/res/layout/tumbang_galeri_detail.xml
@@ -252,7 +252,7 @@
 
                             <!-- Start Text View Foto -->
                             <TextView
-                                    android:id="@+id/text_galeri_keterangan_foto"
+                                    android:id="@+id/text_galeri_keterangan"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="#D046F2"
@@ -266,7 +266,7 @@
 
                         <!-- Start Text View Foto -->
                         <TextView
-                                android:id="@+id/galeri_keterangan_foto"
+                                android:id="@+id/galeri_keterangan"
                                 android:layout_width="fill_parent"
                                 android:layout_height="fill_parent"
                                 android:textColor="#FF0000"
