--- a/res/layout/tumbang_galeri_tambah.xml
+++ b/res/layout/tumbang_galeri_tambah.xml
@@ -243,7 +243,7 @@
 
                         <!-- Start Text View Keterangan -->
                         <TextView
-                                android:id="@+id/text_galeri_keterangan_foto"
+                                android:id="@+id/text_galeri_keterangan"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="#D046F2"
@@ -254,7 +254,7 @@
 
                         <!-- Start Text View Keterangan -->
                         <EditText
-                                android:id="@+id/galeri_keterangan_foto"
+                                android:id="@+id/galeri_keterangan"
                                 android:layout_width="fill_parent"
                                 android:layout_height="fill_parent"
                                 android:textColor="#FF0000"
